2002-11-17  Cengiz Gunay  <cengiz@ull.edu>

	* utils/Objective.java (Repository): Implemented the stop method,
	not tested!

	* utils/ParallelTask.java (Repository): Implemented the stop
	method, not tested!

	* utils/Simulation.java (Repository): Added a stop method for
	clean-up.

2002-11-15  Cengiz Gunay  <cengiz@ull.edu>

	* utils/plots/MatLab.java (Repository): Can display superposed plot.

	* utils/plots/ErrorBarPlot.java (Repository): Now redundant with
	Grapher.ErrorData and SingleDataPlot.

	* utils/plots/Grapher.java (Repository): New grapher capabilities
	for lisp-like representation of specific grapher commands.

	* utils/plots/SuperposedDataPlot.java (Repository): Multiple data,
	single axis plot.

	* utils/plots/SingleDataPlot.java (Repository): Util for a single
	dataset on a single axis.

2002-11-13  Cengiz Gunay  <cengiz@ull.edu>

	* utils/plots/ErrorValue.java (Repository): New profilable entity
	for supporting errorbar plots.

	* utils/plots/ErrorBarPlot.java (Repository): Errorbar plots now
	available. Required major redesign leading to v2.0.

2002-05-09  Cengiz Gunay  <cengiz@ull.edu>

	* utils/plots/Grapher.java (Repository): Improved Grapher.profile() by making it
	skip profile entries with zero change. Improved plot descriptions.

	* utils/Iteration.java (Repository): Added a new static loop method both here and a 
	counterpart in UninterruptedIteration that takes an array as argument and uses for
	to loop.

2002-05-04  Cengiz Gunay  <cengiz@ull.edu>

	* utils/plots/PlotHandle.java (Repository): Birth of this class. Represents
	the visual form of a plot associated with its grapher and windownumber. Also
	holds the writeEPS() method.

	* utils/Simulation.java (Repository): Changed it to an interface.

2002-04-29  Cengiz Gunay  <cengiz@ull.edu>

	* utils/Iteration.java (Repository): All functions throw BreakOutOfIterationException
	see new class UninterruptedIteration for old behavior of Iteration.
