@@ -1,3 +1,8 @@
+2002-11-24  Cengiz Gunay  <cengiz@ull.edu>
+
+	* utils/plots/Grapher.java (Repository): Added a vertical bar
+	dataset for showing predicted values on the x-axis.
+
 2002-11-17  Cengiz Gunay  <cengiz@ull.edu>
 
 	* utils/Objective.java (Repository): Implemented the stop method,
